@@ -29,15 +29,18 @@
 ///////////////////////////////////////////////////////////////////////////
 
 #include <openvdb/openvdb.h>
+#include <openvdb/util/CpuTimer.h>
 #include <openvdb/util/logging.h>
-#include <cppunit/BriefTestProgressListener.h>
 #include <cppunit/CompilerOutputter.h>
+#include <cppunit/TestFailure.h>
+#include <cppunit/TestListener.h>
 #include <cppunit/TestResult.h>
 #include <cppunit/TestResultCollector.h>
 #include <cppunit/TextTestProgressListener.h>
 #include <cppunit/extensions/TestFactoryRegistry.h>
 #include <cppunit/ui/text/TestRunner.h>
 #include <algorithm> // for std::shuffle()
+#include <cmath> // for std::round()
 #include <cstdlib> // for EXIT_SUCCESS
 #include <cstring> // for strrchr()
 #include <exception>
@@ -92,6 +95,45 @@ getTestNames(StringVec& nameVec, const CppUnit::Test* test)
         }
     }
 }
+
+
+/// Listener that prints the name, elapsed time, and error status of each test
+class TimedTestProgressListener: public CppUnit::TestListener
+{
+public:
+    void startTest(CppUnit::Test* test) override
+    {
+        mFailed = false;
+        std::cout << test->getName() << std::flush;
+        mTimer.start();
+    }
+
+    void addFailure(const CppUnit::TestFailure& failure) override
+    {
+        std::cout << " : " << (failure.isError() ? "error" : "assertion");
+        mFailed  = true;
+    }
+
+    void endTest(CppUnit::Test*) override
+    {
+        if (!mFailed) {
+            // Print elapsed time only for successful tests.
+            const auto msec = int(std::round(mTimer.delta()));
+            std::cout << " : OK (";
+            if (msec > 0) {
+                std::cout << msec;
+            } else {
+                std::cout << "<1";
+            }
+            std::cout << "ms)";
+        }
+        std::cout << std::endl;
+    }
+
+private:
+    openvdb::util::CpuTimer mTimer;
+    bool mFailed = false;
+};
 
 
 int
@@ -198,7 +240,7 @@ run(int argc, char* argv[])
         controller.addListener(&result);
 
         CppUnit::TextTestProgressListener progress;
-        CppUnit::BriefTestProgressListener vProgress;
+        TimedTestProgressListener vProgress;
         if (verbose) {
             controller.addListener(&vProgress);
         } else {
